adding paths for DIAS (paper) model. @JOLF God løsning! Den understøtter flere miljøer, det bliver vi glade for senere

--- a/config/model_reference.yml
+++ b/config/model_reference.yml
@@ -1,8 +1,11 @@
 development:
-  Image: http://localhost:3001/Image/
+  Image: http://localhost:3003/catalog/
+  Paper: http://localhost:3001/catalog/
 
 test:
-  Image: http://localhost:3000/Image/
+  Image: http://localhost:3003/catalog/
+  Paper: http://localhost:3001/catalog/
 
 production:
-  Image: http://localhost:3001/Image/
+  Image: http://localhost:3003/catalog/
+  Paper: http://localhost:3001/catalog/
