TA812: Added bootswatch theme, and customized

--- a/config/model_reference.yml
+++ b/config/model_reference.yml
@@ -1,8 +1,8 @@
 development:
-  Image: http://localhost:3001/Image/
+  Image: http://localhost:3001/images/
 
 test:
-  Image: http://localhost:3000/Image/
+  Image: http://localhost:3000/images/
 
 production:
-  Image: http://localhost:3001/Image/
+  Image: http://localhost:3001/images/
