--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 notifications:
-  email: false
+  email: true
 rvm:
   - "1.9.3"
 # uncomment this line if your project needs to run something other than `rake`:
