--- a/config/solr.yml
+++ b/config/solr.yml
@@ -11,8 +11,11 @@
 # how to start up solr, generally for automated testing. 
 
 development:
-  url: http://127.0.0.1:8983/solr
+  url: http://bifrost-dev-solr.kb.dk:8080/solr/bifrost
+  #url: http://127.0.0.1:8983/solr
 test: &test
   url: <%= "http://127.0.0.1:#{ENV['TEST_JETTY_PORT'] || 8888}/solr" %>
 cucumber:
   <<: *test
+production:
+    url: http://bifrost-dev-solr.kb.dk:8080/solr/bifrost
