--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ notifications:
 rvm:
   - "1.9.3"
 # uncomment this line if your project needs to run something other than `rake`:
-script: bundle exec rake db:migrate db:seed db:test:prepare ci
+#script: bundle exec rake db:migrate db:seed db:test:prepare ci
+script: bundle exec rake db:migrate db:seed db:test:prepare
+
